2004-08-03  Richard Hult  <richard@imendio.com>

	* src/planner-resource-dialog.c: Clean up coding style a bit. Use
	g_strtod instead of g_ascii_strtod. Change cost to a regular
	property.

	* src/planner-project-properties.c:
	* src/planner-resource-view.c:
	* src/planner-task-tree.c: Use g_strtod instead of g_ascii_strtod.

2004-08-03  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-old-xml.c: Handle non-existant properties better.
	* libplanner/mrp-project.c: Don't add a cost custom property.
	* libplanner/mrp-resource.c: Add cost property. 

	* libplanner/mrp-task-manager.c (mrp_task_manager_move_task):
	Invalidate cost cache.

	* libplanner/mrp-task.c (task_remove_subtree_cb): Remove extra
	mrp_object_removed call.
	(imrp_task_remove_subtree): Invalidate cost cache.
	(task_set_property): Likewise.

	Based on patch from Doroszlai Attila to fix bug #138475.

2004-08-02  Alvaro del Castilo  <acs@barrapunto.com>
	
	* data/sql/Makefile.am: new files
	data/sql/database-0.13.sql
	data/sql/upgrade-0.11-0.13.sql
	added new table to store the database tables version
	* libplanner/Makefile.am: need DATADIR to find SQL files
	* libplanner/mrp-sql.c: fix some warnings, formatting and
	issues with the project_id.
	* src/Makefile.am: used planner version to locate SQL files
	to be loaded. Also we use SQL_DIR to find SQL files.
	* src/planner-sql-plugin.c: 
	(sql_get_last_error) get last error from database connection
	(is_newer_version): compare to planner versions
	(check_database_tables): check if tables in planner database already exists
	and create them if not.
	(create_database): check if plannet database exists and create it if not.
	(sql_get_tested_connection): get a connection to the database checking that
	planner database and tables are created if they don't exist.
	
2004-08-02  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-model.h:
	* src/planner-task-tree.c: (task_tree_assigned_to_data_func),
	(task_tree_add_column):